# clipivot

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.tex.md
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.sh  install.sh  script.sh  utils.sh
cli_testing_utils/: Cargo.toml  LICENSE  README.md
cli_testing_utils/src/: lib.rs  macros.rs
csv_cli_core/: Cargo.toml
csv_cli_core/src/: cli_settings.rs  errors.rs  lib.rs
proptest-regressions/: aggregation.txt  parsing.txt
src/: aggfunc.rs  aggregation.rs  cli.rs  cli.yml  cli_settings.rs  config.rs  csv_settings.rs  errors.rs  lib.rs  log_query.rs  main.rs  parsing.rs
src/aggregation/: aggfunc.rs  errors.rs  parsing.rs
test_csvs/: Lew.csv  Lottery.csv  Mavro.csv  Michelso.csv  NumAcc1.csv  NumAcc2.csv  NumAcc3.csv  NumAcc4.csv  PiDigits.csv  empty_count.csv  layoffs.csv  sample_median.csv  sample_mode.csv  sample_stddev.csv  sorting_csv.csv  tab_tsv.tsv  unique_count_ex.csv
tests/: cli.rs  test_cli.rs  test_numerical_accuracy.rs
tests/common/: mod.rs
