[package]
name = "csvpivot"
version = "0.1.0"
authors = ["Max Lee <maxbmhlee@gmail.com>"]
edition = "2018"
license = "Apache-2.0"


[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
chrono = "0.4"
csv = "1"
dtparse = "1.0.3"
rust_decimal = "1.0.1"

[dev-dependencies]
approx = "0.3.2"
rand = "0.6"