[package]
name = "clipivot"
description = "A command-line tool for quickly generating pivot tables."
version = "0.1.0"
authors = ["Max Lee <maxbmhlee@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["csv", "tsv", "cli"]
readme = "README.md"

[profile.release]
lto = "thin"

[badges]

maintenance = { status = "passively-maintained" }
travis-ci = { repository = "maxblee/clipivot" }


[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
chrono = "0.4"
csv = "1"
dtparse = "1.0.3"
rust_decimal = "1.0.1"

[dev-dependencies]
approx = "0.3.2"
proptest = "0.9.4"
rand = "0.6"