[package]
name = "clipivot"
description = "A command-line tool for quickly generating pivot tables."
version = "0.3.5"
authors = ["Max Lee <maxbmhlee@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["csv", "tsv", "cli"]
documentation = "https://docs.rs/clipivot/latest/clipivot/"
repository = "https://github.com/maxblee/clipivot"
homepage = "https://github.com/maxblee/clipivot"
readme = "README.md"

[badges]

maintenance = { status = "passively-maintained" }
travis-ci = { repository = "maxblee/clipivot" }


[dependencies]
clap = "2.27.0"
chrono = "0.4.11"
csv = "1.1.3"
indexmap = "1.3.2"
lazy_static = "1.4.0"
rust_decimal = "1.4.0"

[dev-dependencies]
approx = "0.3.2"
assert_cmd = "1.0.1"
proptest = "0.9.5"
rand = "0.6"